:sparkles: Find path API endpoint
