# src/Dto/FactoryConnection.php
@@ -6,13 +6,17 @@ namespace App\Dto;
 
 use App\Models\Connection;
 use App\Models\Factory;
+use OpenApi\Attributes as OA;
 
+#[OA\Schema]
 class FactoryConnection
 {
     public function __construct(
-        public Factory $start,
-        public Connection $connection,
-        public Factory $end,
-    ) {
-    }
+      #[OA\Property]
+      public Factory    $start,
+      #[OA\Property]
+      public Connection $connection,
+      #[OA\Property]
+      public Factory    $end,
+    ) {}
 }
